--- a/client/index.haml
+++ b/client/index.haml
@@ -4,13 +4,22 @@
     %script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js')
 
     %script(src='caterwaul.js')
-    %script(src='caterwaul.continuation.js')
-    %script(src='caterwaul.seq.js')
     %script(src='caterwaul.iter.js')
     %script(src='caterwaul.error.js')
+    %script(src='caterwaul.continuation.js')
+    %script(src='caterwaul.seq.js')
     %script(src='montenegro.jquery.js')
+
+    %script(src='thermal.js')
 
     %link(rel='stylesheet' href='style.css')
 
   %body
-    Hello there!
+    #live
+      #toolbar
+        %button#create-story Create story
+      #stories
+
+    #templates(style='display:none')
+      #story.story
+        %h3.name Story name
