Added instavalidate as a library

--- a/client/index.haml
+++ b/client/index.haml
@@ -3,6 +3,8 @@
   %head
     %script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js')
 
+    %script(src='jquery.instavalidate.js')
+
     %script(src='caterwaul.js')
     %script(src='caterwaul.iter.js')
     %script(src='caterwaul.error.js')
