--- a/client/index.haml
+++ b/client/index.haml
@@ -2,16 +2,11 @@
 %html
   %head
     %script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js')
-
     %script(src='jquery.instavalidate.js')
+    %script(src='jquery.fix.append-multiple.js')
 
-    %script(src='caterwaul.js')
-    %script(src='caterwaul.iter.js')
-    %script(src='caterwaul.error.js')
-    %script(src='caterwaul.continuation.js')
-    %script(src='caterwaul.seq.js')
+    %script(src='caterwaul.all.js')
     %script(src='montenegro.jquery.js')
-
     %script(src='thermal.js')
 
     %link(rel='stylesheet' href='style.css')
