--- a/client/style.css
+++ b/client/style.css
@@ -1,4 +1,6 @@
 body {font-size: 9pt; font-family: sans-serif}
+
+/*
 #toolbar {position: fixed; top: 10px; left: 10px}
 #stories {width: 900px; margin: auto}
 
@@ -10,4 +12,4 @@ a:hover {text-decoration: underline}
 .story   {border: solid 1px #a00; width: 294px}
 .comment {border: solid 1px #888}
 
-.editable {cursor: pointer}
+.editable {cursor: pointer}*/
